--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="vecteezy_coming-soon-background-illustration-template-design_.jpg" alt="intalks">
+    <a href="#" class="main-sec">
+        <img src="vecteezy_coming-soon-background-illustration-template-design_.jpg" alt="intalks">
+    </a>
+    <img src="intalks-animation-two.png" class="intalks" alt="">
 </body>
-</html>
+</html> 
