--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title -->
-  <!-- <title>ESSO | Coffee Shop Slider</title> -->
+  <title>Intalks</title>
 
   <!-- Stylesheets -->
   <link rel='stylesheet' href='src/css/showcase.css' type='text/css' media='all'>
