--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
+<title>"Intalks Podcast: Insights & Strategies from Industry Leaders | Interactive Discussions"</title>
+<meta name="description" content="Intalks is premier podcast designed to provide an interactive and engaging platform  where industry leaders are welcome to exchange their invaluable experiences, innovative strategies and, insights ">
+<meta name="keywords" content="Intalks Podcast">
 
 <!-- Mirrored from esso-slider.netlify.app/?storefront=envato-elements by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Jul 2024 10:20:50 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
@@ -11,7 +14,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title -->
-  <title>Intalks</title>
+  <!-- <title>Intalks</title> -->
+ 
 
   <!-- Stylesheets -->
   <link rel='stylesheet' href='src/css/showcase.css' type='text/css' media='all'>
