--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<title>"Intalks Podcast: Insights & Strategies from Industry Leaders | Interactive Discussions"</title>
+<title>Intalks Podcast: Insights & Strategies from Industry Leaders | Interactive Discussions</title>
 <meta name="description" content="Intalks is premier podcast designed to provide an interactive and engaging platform  where industry leaders are welcome to exchange their invaluable experiences, innovative strategies and, insights ">
 <meta name="keywords" content="Intalks Podcast">
 
