--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Title -->
   <!-- <title>Intalks</title> -->
- 
+  <!-- <link rel="icon" href="src/img/intalks-animation.png" width="100" height="100" /> -->
 
   <!-- Stylesheets -->
   <link rel='stylesheet' href='src/css/showcase.css' type='text/css' media='all'>
@@ -51,9 +51,13 @@
                         <!-- Section Slide -->
                         <div class="swiper-slide" data-number="" data-title="">
                           <div class="img-mask">
-                            <div class="section-image"
-                              data-src="src/img/prv/1.jpg">
-                            </div>
+                            <video autoplay loop muted playsinline controls width="100%" height="100%">
+                              <source src="/src/img/second-video-intalks.mp4" type="video/mp4">
+                           
+                          </video>
+                            <!-- <div class="section-image"
+                                data-src="src/img/prv/1.jpg">
+                            </div> -->
                           </div>
                           <div class="title hide-ball" data-type="page-transition">
                             <div class="title-main">           
