--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Title -->
   <!-- <title>Intalks</title> -->
-  <!-- <link rel="icon" href="src/img/intalks-animation.png" width="100" height="100" /> -->
+  <link rel="icon" href="src/img/intalks-animation-4.png" />
 
   <!-- Stylesheets -->
   <link rel='stylesheet' href='src/css/showcase.css' type='text/css' media='all'>
