--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <!-- Stylesheets -->
   <link rel='stylesheet' href='src/css/showcase.css' type='text/css' media='all'>
   <link rel='stylesheet' href='src/css/style.css' type='text/css' media='all'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+
+
+
 </head>
 
 <body class="home page-template page-template-showcase-page page-template-showcase-page-php page page-id-16 hidden hidden-ball smooth-scroll">
@@ -50,17 +54,26 @@
                       <div class="swiper-wrapper wrapper-slider-img">
                         <!-- Section Slide -->
                         <div class="swiper-slide" data-number="" data-title="">
+                          <a href="https://www.youtube.com/watch?v=9cgx45gJfE8">
                           <div class="img-mask">
-                            <video autoplay loop muted playsinline controls width="100%" height="100%">
-                              <source src="/src/img/second-video-intalks.mp4" type="video/mp4">
+
+                          <!-- <div class="iframe-container">
+                            <iframe loading="lazy"
+                                src="https://www.canva.com/design/DAGMojU_rr8/XSp2fO6n26RrN17WgJaTFQ/view?embed"
+                                allowfullscreen
+                                allow="autoplay; fullscreen" width="100%" height="100%">
+                            </iframe>
+                        </div> -->
+
                            
-                          </video>
-                            <!-- <div class="section-image"
-                                data-src="src/img/prv/1.jpg">
-                            </div> -->
+                              <div class="section-image image-sec" 
+                                data-src="src/img/first-podcast-thumbnail.jpeg">
+                            </div>
                           </div>
+                        </a>
                           <div class="title hide-ball" data-type="page-transition">
-                            <div class="title-main">           
+                            <div class="title-main">  
+                             <a href="https://www.youtube.com/watch?v=9cgx45gJfE8" target="_blank" class="click-here-btn"><i class="fas fa-arrow-right"></i> Click Here </a>       
                             </div>
                           </div>
                         </div>
