--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 
                            
                               <div class="section-image image-sec" 
-                                data-src="src/img/first-podcast-thumbnail.jpeg">
+                                data-src="src/img/elon-musk.jpg">
                             </div>
                           </div>
                         </a>
                           <div class="title hide-ball" data-type="page-transition">
                             <div class="title-main">  
-                             <a href="https://www.youtube.com/watch?v=9cgx45gJfE8" target="_blank" class="click-here-btn"><i class="fas fa-arrow-right"></i> Click Here </a>       
+                             <a href="https://www.youtube.com/watch?v=Tu1Z5w_lEqo" target="_blank" class="click-here-btn"><i class="fas fa-arrow-right"></i> Click Here </a>       
                             </div>
                           </div>
                         </div>
