--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
                               <div class="title-main ">
                                 <form class="formsubmit" id="contactForm">
                                   <input type="text" name="name" id="name" placeholder="NAME">
-                                  <input type="text" name="phone" id="phone" placeholder="PHONE">
+                                  <input type="text" name="phone" id="phone" placeholder="CONTACT">
                                   <input type="text" name="city" id="city" placeholder="CITY">
                                   <select name="connect" id="connect">
-                                    <option value="reason">THE REASEON LIKE TO CONNECT:</option>
+                                    <option value="reason">THE REASEON TO CONNECT:</option>
                                     <option value="guest">WANT TO BE GUEST</option>
                                     <option value="member">ENQUIRY MESSAGE</option>
                                   </select>
