latest thumbnail added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       <div class="swiper-wrapper wrapper-slider-img">
                         <!-- Section Slide -->
                         <div class="swiper-slide" data-number="" data-title="">
-                          <a href="https://www.youtube.com/watch?v=9cgx45gJfE8">
+                          <a href="https://youtu.be/C4-0iwevOY8?si=_ECvvK10byjezVG1">
                           <div class="img-mask">
 
                           <!-- <div class="iframe-container">
@@ -67,13 +67,13 @@
 
                            
                               <div class="section-image image-sec" 
-                                data-src="src/img/elon-musk.jpg">
+                                data-src="src/img/popular-shoe-mart-thumbanil-copy.jpg">
                             </div>
                           </div>
                         </a>
                           <div class="title hide-ball" data-type="page-transition">
                             <div class="title-main">  
-                             <a href="https://www.youtube.com/watch?v=Tu1Z5w_lEqo" target="_blank" class="click-here-btn"><i class="fas fa-arrow-right"></i> Click Here </a>       
+                             <a href="https://youtu.be/C4-0iwevOY8?si=_ECvvK10byjezVG1" target="_blank" class="click-here-btn"><i class="fas fa-arrow-right"></i> Click Here </a>       
                             </div>
                           </div>
                         </div>
